# CTMC

./: README.md
Template Matching/: Template Matching.sln  Template Matching.vcxproj  kernel.cu
Template Matching/x64/Debug/: Template Matching.ilk  kernel.cu-988840411.deps
Template Matching/x64/Debug/Template.3F33EDF3.tlog/: Template Matching.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/report/: prob-definition.tex  ref.tex  report.aux  report.lof  report.out  report.tex  report.toc  title.tex  work-done.tex
fft_based_template_matching/: fft_based_template_matching.sln
fft_based_template_matching/fft_based_template_matching/: fft_based_template_matching.vcxproj  kernel.cu
fft_based_template_matching/fft_based_template_matching/x64/Release/: kernel.cu580509826.deps
naive_template_matching/performance_analysis/: analysis_2.nvact
naive_template_matching/template_matching/: kernel.cu  template_matching.vcxproj
naive_template_matching/x64/Debug/: template_matching.ilk
naive_template_matching_automated/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bitmap_image.hpp.vcxproj  bitmap_image.hpp.vcxproj.filters  cmake_install.cmake  kernel.cu  main.cpp  ntm.cu  utils.cu
naive_template_matching_automated/includes/: kernel.cuh  ntm.cuh  utils.cuh
template_matching/: template_matching.sln
template_matching/template_matching/: fft.cu  kernel.cu  output.txt  sex.txt  template_matching.vcxproj
template_matching/x64/Debug/: template_matching.ilk
(+22 files in other folders)
